platform-consumption/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer-digital
  labels:
    app.kubernetes.io/part-of: mayabank-customer-kyc
    platform.mayabank.example/consumer: customer-kyc-digital
