platform-consumption/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-shared-platform-egress
  namespace: customer-digital
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              platform.mayabank.example/capability: identity
    - to:
        - namespaceSelector:
            matchLabels:
              platform.mayabank.example/capability: observability
